css/style.css
	* {
 	 box-sizing: border-box;
        }

	h1 {
 	 font-family: "VeronaSerialRegular", sans-serif;
     font-size: 4em;
	 font-weight: 400;
	 line-height: 1em;
	 margin: 0em 0 0.3em;
	 color: #000000;
	}	
	h2 {
	 font-family: "Poppins", sans-serif;
	 font-weight: 400;
	 font-size: 2.5em;
	 line-height: 1.2em;
	 letter-spacing: -0.025em;
	 margin: 0em 0 0.3em;
	 color: #303030;
	}
	h3 {
 	 font-family: "Poppins", sans-serif;
	 font-weight: 400;
	 letter-spacing: -0.025em;
	 font-size: 2em;
	 line-height: 1.35em;
	 margin: 0 0 0.3em;
	 color: #383838;
	}
	h4 {
 	 font-family: "Poppins", sans-serif;
	 font-weight: 400;
	 letter-spacing: -0.01em;
	 font-size: 1.35em;
	 line-height: 1.25em;
	 margin: 0 0 0.5em;
	 color: #383838;
	}
    h5 {
	text-transform: uppercase;
	font-weight: 500;
	font-size: 0.9em;
    margin: 0 0 0.5em;
	letter-spacing: 0.165em;
	color: #383838;
	}
    h6 {
    font-family: "Poppins", sans-serif;
    text-transform: uppercase;
    font-weight: 500;
    font-size: 0.75em;
    margin: 0 0 0.25em;
    letter-spacing: 0.175em;
    color: #232425;
    }
    p {
    margin: 16px 0px 24px 0px;
    }
    body {
     font-family: "Inter", sans-serif;
     font-size: 1em;
     font-weight: 400;
     background-color: #FAFAFA;
     line-height: 1.675em;
     color: #303030;
     margin: 0px auto;
    }
    .container {
    max-width: 1240px;
    margin: 0px auto;
    padding: 32px 0px;
    }
    .section {
    display: block;
    padding: 16px 24px;
    }
   .mission {
    float: left;
    padding: 24px;
    width: 50%;
    }
	header {
  	 width: 100%;
 	 background-color: #FAFAFA;
  	}
	a {
    color: #6D8FA1;
    text-decoration: none;
	}
    ul {
    padding-top: 16px;
    padding-bottom: 20px;
    }
    .button {
    float: left;
    display: block;
    color: white;
    font-weight: 500;
	font-size: 0.9em;
	letter-spacing: 0.175em;
    text-transform: uppercase;
    background: #DF3C57;
    padding: 12px 24px;
    border-radius: 999px;
    margin: 0px 16px 0px 0px;
    }
    .button:hover {
    background: #C92C46;
    }
    .button-secondary {
    float: left;
    display: block;
    color: black;
    font-weight: 500;
	font-size: 0.9em;
	letter-spacing: 0.175em;
    text-transform: uppercase;
    background: #fafafa;
    padding: 12px 24px;
    border: 1px solid black;
    border-radius: 999px;
    margin: 0px 16px 16px 0px;
    }
    .button-secondary:hover {
    background: #EBEFF2;
    }
    .topnav {
    overflow: hidden;
    padding: 12px 0px 0px 0px;
    max-width: 1240px;
    margin: 0px auto;
    }
    .topnav a {
     float: left;
     display: block;
     color: #303030;
     padding: 8px 16px;
     text-align: center;
     text-transform: uppercase;
	 font-weight: 500;
	 font-size: 0.9em;
	 letter-spacing: 0.165em;
     text-decoration: none;
    }
    .topnav a:hover {
    text-decoration: underline;
    color: #000000;
    }
    .topnav a.split {
    float: right;
    padding: 16px;
	}
    .topnav .icon {
    display: none;
    }
	.footer {
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-start;
    display: flex;
    padding: 80px 24px 16px;
	}
    .footer img {
    max-width: 164px;
    }
    .footer a.button-secondary {
    margin-right: 0px;
    }

	.image {
	width: 172px;
	}
	.portfolio {
	max-width: 920px;
	width: 100%;
	border-radius: 24px; 
	}
    .feature-image {
    width: 100%; 
    border-radius: 24px;
    }
    .menu-image {
    width: 25%;
    border-radius: 16px;
    padding-left: 0px;
    padding-right: 0px;    
    }
    .quote {
    border-left: 4px solid #8e8282; 
    padding: 0px 16px 0px 24px;
    margin: 40px 32px;
    width: 75%;
    }
	.column-article {
	 float: left;
	 padding: 24px 48px 24px 24px;
	 width: 50%;
	}
    .column-title {
	 float: left;
	 padding: 24px;
	 width: 100%;
	}
    .portfolio-details {
    flex-direction: row;
    justify-content: space-between;
    align-items: flex-start;
    padding-top: 16px;
    display: flex;
    }
    .portfolio-details h4 {
    color: #BBBBBB
    }
    .details-box {
     float: left;
	 padding: 24px 24px 32px 24px;
	 width: 50%;
	}
    .column-details-left {
    float: left;
    padding: 32px 12px 32px 32px;
    width: 45%;
    }
    .column-details-right {
    float: left;
    padding: 32px 32px 32px 12px;
    width: 55%;
    }
    .column-details {
    float: left;
    padding: 32px;
    width: 100%;
    }
	.column-portfolio {
	 float: left;
	 float: left;
	 padding: 16px 24px;
	 width: 50%;
	}
	.portfolio-menu {
    padding: 0px 24px;
    width: 100%;
    flex-direction: column;
    display: flex;
	}
    .portfolio-row a {
     flex-direction: row;
     justify-content: flex-start;
     display: flex;
  	 border-bottom: 1px solid #e4e4e4;
	 width: 100%;
     padding: 24px 0px;
     align-items: center;
    }

    .portfolio-row h2 { 
     font-size: 4.5em;
     padding-left: 32px;
     color: #232425;
     display: block;
    }

	.logo-section {
	display: flex;
    align-items: center;
    justify-content: center;
	}
	.logo-row {
	margin: 0px auto;
	padding: 12px;
	}
	.logo {
	width: 100%;
	padding-bottom: 12px;
	}
	.row:after {
  	 content: "";
  	 display: table;
  	 clear: both;
	}
    .row-details {
    border-radius: 24px;
    background-color: #EFEFEF;
    }
    .row-details:after {
  	 content: "";
  	 display: table;
  	 clear: both;
	}
	.spacer {
	 padding-bottom: 24px;
	}

	@media screen and (max-width: 960px) 
	{
    h1 {
    font-size: 3.25em;
    line-height: 1.1em;
    }
    .portfolio-row h2 {
    padding-left: 16px;
    font-size: 1.9em;
    }
    .container {
    padding-top: 16px;
    }
	.column-article {
	padding: 8px 24px;
    width: 100%;
  	}
	.column-portfolio {
    padding: 12px 24px;
	   width: 100%;
  	}
	.column-menu {
    padding: 24px 32px;
	}
    .column-details-left {
    width: 50%;
    }
    .column-details-right {
    width: 50%;
    }
    .details-box {
    width: 100%;
    }
    .quote {
    width: 100%;
    margin: 32px 32px 32px 0px;
    }
    .section {
    display: block;
    padding: 8px 24px;
    }
    .footer {
    display: block;
    width: 100%;
    }
    .footer img {
    max-width: 240px;
    }
    .footer a.button-secondary {
    margin-bottom: 48px;
    }
    .footer a.button {
    margin: 24px 0px 4px;
    }
    .mission {
    padding: 0px 24px;
    width: 100%;
    }
    .feature-image {
    border-radius: 24px;
    }
    .portfolio {
    border-radius: 24px;
    }
    .image {
    width: 120px;
    }
    .menu-image {
    border-radius: 8px;
    width: 25%;
    }
    .topnav a {
    padding-top: 0px;
    }
    .button {
    width: 100%;
    text-align: center;
    margin: 16px 0px;
    }
    .button-secondary {
    width: 100%;
    text-align: center;
    margin: 16px 0px;
   }
   @media screen and (max-width: 960px) {
  .topnav a:not(:first-child) {display: none;}
  .topnav a.icon {
    float: right;
    display: block;
    font-size: 20px;
   }
   }    

    @media screen and (max-width: 960px){
   .topnav.responsive {position: relative;}
   .topnav.responsive .icon {
    position: absolute;
    right: 0;
    top: 12px;
    }
    .topnav.responsive a {
    float: none;
    display: block;
    text-align: left;
    }
    }

    @media screen and (max-width: 640px) 
	{
    .column-details-left {
    width: 100%;
    padding: 32px 32px 0px 32px;
    }
    .column-details-right {
    width: 100%;
    padding: 32px;
    }
    }

